@@ -1,5 +1,6 @@
 %define	with_python_subpackage	@WITH_PYTHON_SUBPACKAGE@
 %define	with_bzip2		@WITH_BZIP2@
+%define	with_apidocs		@WITH_APIDOCS@
 
 # XXX legacy requires './' payload prefix to be omitted from rpm packages.
 %define	_noPayloadPrefix	1
@@ -272,6 +273,9 @@ fi
 
 %files devel
 %defattr(-,root,root)
+%if %{with_apidocs}
+%doc apidocs
+%endif
 %{__prefix}/include/rpm
 %{__prefix}/lib/librpm.a
 %{__prefix}/lib/librpm.la
@@ -296,6 +300,14 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Sun Dec  3 2000 Jeff Johnson <jbj@redhat.com>
+- improved find-{requires,provides} for aix4/hpux/irix6/osf.
+		Tim Mooney<mooney@dogbert.cc.ndsu.NoDak.edu>
+- portability: remove use of GNU make subst in lib/Makefile (Joe Orton).
+- python: bind package removal (#21274).
+- autoconfigure building python bindings.
+- autoconfigure generating rpm API doco rpm-devel package.
+
 * Thu Nov 30 2000 Jeff Johnson <jbj@redhat.com>
 - add missing headerFree for legacy signature header.
 - fix: removed packages leaked DIRINDEXES tag data.
