@@ -50,6 +50,7 @@
 	- portability: remove use of GNU make subst in lib/Makefile (Joe Orton).
 	- python: bind package removal (#21274).
 	- autoconfigure building python bindings.
+	- autoconfigure generating rpm API doco.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
